repositioned pickup request and schedule pickup today paragraphs

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="top-body">
           <div class="top-top">
             <p><a id="pickUp" href="#">Pickup Request</a></p>
-            <p>Scheduale a pickup today!</p>
+            <p>Schedule a pickup today!</p>
           </div>
           <div class="btm-top">
             <p>We Purchase & Recycle Surplus Computers and Mac Equipment!</p>
@@ -163,7 +163,7 @@
                 <a href="#"><i class="fa fa-users" aria-hidden="true"></i></a>
               </div>
               <div>
-                <p><a href="#" class="title">Public Recyling</a></p>
+                <p><a href="#" class="title">Public Recycling</a></p>
                 <p class="line">
                   Technology is quickly becoming the basis of the United States
                   economy. CSS is open to the public for electronic items to be
