revamped testimonials section css

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <!-- <div id="tPerson1"></div> -->
                 <img src="img/person1.jpg" alt="Client Photo" id="tPerson1" />
                 <div class="pFirst">
-                  <p>
+                  <p id="paragraph">
                     I’ve probably purchased 15 computers over the years at
                     Computer Service Solutions. Some for my own use and others
                     for family and friends. I always got a great price and good
@@ -299,7 +299,7 @@
                     instead, Chris Carter fixed it. Wish every company stood
                     behind their products like that.
                   </p>
-                  <p>Jeff R.</p>
+                  <p id="paragraph">Jeff R.</p>
                 </div>
               </div>
               <div class="test2">
@@ -309,14 +309,14 @@
                 <!-- <div id="tPerson2"></div> -->
                 <img src="img/person2.jpg" alt="Client Photo" id="tPerson2" />
                 <div class="pSecond">
-                  <p>
+                  <p id="paragraph">
                     I love this shop. Rick helped me out with the purchase of a
                     laptop but it had problems and i took it in and he replaced
                     it with another laptop with no hassles. Great place to buy
                     computers and laptops. Gonna be going back to buy a desktop
                     for my husband.
                   </p>
-                  <p>Arlene A.</p>
+                  <p id="paragraph">Zack A.</p>
                 </div>
               </div>
             </div>
