added id routes to about us and services links, changed font size in header section for screen sizes under 1130px

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
           <p>Imon's Computer Solutions</p>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Services</a></li>
-            <li><a href="index.html">About Us</a></li>
+            <li><a href="#services-section">Services</a></li>
+            <li><a href="#about-section">About Us</a></li>
             <li><a href="index.html">Contact Us</a></li>
           </ul>
         </div>
@@ -51,7 +51,7 @@
         </div>
 
         <!-- MAIN BODY SECTION -->
-        <div class="main-body">
+        <div id="about-section" class="main-body">
           <div class="top-main">
             <p class="top-main1">
               Computer Surplus Solutions provides asset recovery, e-waste
@@ -70,7 +70,7 @@
           </div>
 
           <!-- SERVICES SECTION -->
-          <div class="services">
+          <div id="services-section" class="services">
             <div class="services-cube1">
               <hr />
             </div>
@@ -330,14 +330,14 @@
           <p class="colorGreen">Our Physical Address</p>
           <p>12882 Haster St.</p>
           <p>Garden Grove, CA 92840</p>
-          <p>Phone Number:(714)663-8500</p>
+          <p>(714) 663-8500</p>
         </div>
         <div class="links">
           <ul>
             <li class="colorGreen">Quick Links</li>
             <li><a href="#">HOME</a></li>
-            <li><a href="#">SERVICES</a></li>
-            <li><a href="#">ABOUT US</a></li>
+            <li><a href="#services-section">SERVICES</a></li>
+            <li><a href="#about-section">ABOUT US</a></li>
             <li><a href="#">CONTACT US</a></li>
           </ul>
         </div>
