added space between services titles and paragraphs

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 
           <!-- SERVICES SECTION -->
           <div id="services-section" class="services">
-            <div class="services-cube1">
+            <div class="services-cube services-cube1">
               <hr />
             </div>
-            <div class="services-cube2">Our Services</div>
-            <div class="services-cube3">
+            <div class="services-cube services-cube2">Our Services</div>
+            <div class="services-cube services-cube3">
               <hr />
             </div>
-            <div class="services-cube4">
+            <div class="services-cube services-cube4">
               <div>
                 <a href="#"><i class="fa fa-list" aria-hidden="true"></i></a>
               </div>
@@ -92,12 +92,12 @@
                 </p>
               </div>
             </div>
-            <div class="services-cube5">
+            <div class="services-cube services-cube5">
               <div>
                 <a href="#"><i class="fa fa-recycle" aria-hidden="true"></i></a>
               </div>
               <div>
-                <p><a href="#" class="title">Recycling</a></p>
+                <p><a href="#" class="title">E-Waste Recycling</a></p>
                 <p class="line">
                   E-waste recycling services are quickly becoming a growing need
                   as the age of technology progresses. There are many companies
@@ -111,7 +111,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-cube6">
+            <div class="services-cube services-cube6">
               <div>
                 <a href="#"
                   ><i class="fa fa-id-card-o" aria-hidden="true"></i
@@ -128,7 +128,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-cube7">
+            <div class="services-cube services-cube7">
               <div>
                 <a href="#"
                   ><i class="fa fa-database" aria-hidden="true"></i
@@ -145,7 +145,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-cube8">
+            <div class="services-cube services-cube8">
               <div>
                 <a href="#"><i class="fa fa-trash" aria-hidden="true"></i></a>
               </div>
@@ -158,7 +158,7 @@
                 </p>
               </div>
             </div>
-            <div class="services-cube9">
+            <div class="services-cube services-cube9">
               <div>
                 <a href="#"><i class="fa fa-users" aria-hidden="true"></i></a>
               </div>
