changed font size for numbers section on screen sizes under 1130px

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                   data-delay="9"
                   data-increment="10"
                   >0</span
-                >%
+                ><span class="percent">%</span>
               </li>
               <li class="description">Client Satisfaction</li>
             </ul>
