--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
-  <body>
+  <body class="page-container">
     <div class="grid">
       <!--HEADER-->
       <header>
